_inc/css/status.css
/* ... */
img.wp-smiley {
border: none !important;
clear: none !important;
float: none !important;
margin: 0 !important;
padding: 0 !important;
}
img.centered,
img.aligncenter {
display: block;
margin-left: auto;
margin-right: auto;
}
img.alignright {
display: inline;
margin: 0 0 2px 7px;
padding: 4px;
}
img.alignleft {
display: inline;
margin: 0 7px 2px 0;
padding: 4px;
}
/*--------------------------------------------------------------
5.5 - Posts
--------------------------------------------------------------*/
table {
width: 100%;
text-align: left;
}
body.error404 .post-header {
margin-left: 0;
}
.post-content {
clear: both;
margin-bottom:20px;
}
.post{
clear:both;
}
div.page,
div.post,
div.attachment {
margin: 0 0 15px;
overflow: hidden;
}
div.page:last-child,
div.post:last-child,
#item-body:last-child,
#trackbacklist {
margin-bottom: 0;
}
h2.posttitle, h2.pagetitle {
line-height: 120%;
margin: 0;
}
h2.pagetitle a,
h2.posttitle a {
color: #666;
text-decoration: none;
}
.edit-link,
.page-link {
clear: both;
font-weight: bold;
}
div.post table,
div.page table {
border: 1px solid #eee;
border-collapse: collapse;
border-spacing: 0;
margin-bottom: 15px;
}
div.post table th,
div.page table th {
border-top: 1px solid #eee;
text-align: left;
}
div.post table td,
div.page table td {
border-top: 1px solid #eee;
}
div.author-box {
background: #f0f0f0;
border-radius: 3px;
-khtml-border-radius: 3px;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
float: left;
font-style: italic;
margin: 0 15px 15px 0;
padding: 10px;
text-align: center;
width: 70px;
}
div.author-box p {
word-wrap: break-word;
}
div.author-box p,
div.comment-avatar-box p {
margin: 5px 0 0;
}
div.author-box a,
div.comment-avatar-box a {
text-decoration: none;
}
div.author-box img {
float: none;
border: 4px solid #fff;
margin: 0;
}
div.post-content {
margin-left: 105px;
}
p.date span:first-child {
font-style: italic;
}
div.post .entry {
margin-bottom: 15px;
}
p.date,
p.postmetadata {
border-bottom: 1px solid #e4e4e4;
border-top: 1px solid #e4e4e4;
color: #888;
margin: 10px 0;
padding: 3px 0;
}
p.postmetadata {
clear: left;
overflow: hidden;
}
.page .tags,
.post .tags {
float: left;
}
span.sticky-post {
font-style: normal;
}
.post-format {
background: #f0f0f0;
color: #888;
float: right;
margin: 10px 0 0 10px;
padding: 10px;
font-size: 12px;
font-size: 1.2rem;
border-radius: 3px;
-khtml-border-radius: 3px;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
}
.post-info {
padding: 0 0 10px;
color: #888;
font-style: italic;
font-size: 12px;
font-size: 1.2rem;
}
.post-meta {
padding: 10px 0;
margin-bottom: 10px;
overflow: hidden;
}
/*--------------------------------------------------------------
6.0 - BuddyPress
--------------------------------------------------------------*/
/*--------------------------------------------------------------
6.1 - Activity
--------------------------------------------------------------*/
#whats-new-declare {
margin: 0 0 20px;
width: 100%;
min-height: 100px;
}
#whats-new-about{
padding: 10px 0 0 0;
}
.groups #whats-new-declare {
border-bottom: 1px solid #ddd;
border-right: none;
border-top: none;
border-left: none;
margin: 0;
padding: 0 0 20px;
}

#whats-new-avatar {
float: left;
width: 80px;
}
ul.item-list.activity-list li {
padding: 10px;
}

#whats-new-avatar img {
padding: 2px;
margin: 10px 12px;
background: #fff;
border-bottom: 1px solid #ddd;
border-left: 1px solid #fff;
border-right: 1px solid #ddd;
border-top: 1px solid #fff;
margin-left: 10px;
border-radius: 3px;
-khtml-border-radius: 3px;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
-moz-box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
-webkit-box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
}

#whats-new-wrapper {
margin-left: 80px;
}

#whats-new-tail {
background: url('../images/speech-tail.png') 0 15px no-repeat;
height: 50px;
width: 42px;
float: left;
}
#whats-new-textarea {
margin-left: 40px;
padding: 15px;
background: #fff;
border-bottom: 1px solid #ddd;
border-left: 1px solid #fff;
border-right: 1px solid #ddd;
border-top: 1px solid #fff;
border-radius: 3px;
-khtml-border-radius: 3px;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
-moz-box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
-webkit-box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
}
#what-new-content {
clear: both;
}
#whats-new-textarea textarea {
height: 40px;
border: 1px solid #eee;
border-radius: 3px;
-moz-border-radius: 3px;
-khtml-border-radius: 3px;
-webkit-border-radius: 3px;
width: 97%!important;
}
#whats-new-options {
float: right;
padding-top: 10px;
}
#whats-new-submit {
float: right;
}
#whats-new-post-in-box {
float: right;
margin-right: 10px;
padding: 4px 10px;
background: white;
border-right: 1px solid #ddd;
border-bottom: 1px solid #ddd;
border-top: 1px solid #eee;
border-left: 1px solid #eee;
border-radius: 3px;
-khtml-border-radius: 3px;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
font-size: 12px;
font-size: 1.2rem;
color: #888;
}

#activity-show {
padding: 8px 10px;
background: white;
border-right: 1px solid #ddd;
border-bottom: 1px solid #ddd;
border-top: 1px solid #eee;
border-left: 1px solid #eee;
border-radius: 3px;
-khtml-border-radius: 3px;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
font-size: 0.8em;
overflow: hidden;
color: #888;
box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
-moz-box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
-webkit-box-shadow: 0 0 2px rgba(0, 0, 0,0.1);
margin: 0 1px 0 1px;
}

#activity-show #subnav {
float: right
}

#activity-show .activity-type-tabs {
float: left;
}

#activity-show li {
margin: 0 10px 0 10px;
}

#activity-show #subnav ul {
margin: 0;
}

#activity-filter-select {
float: right;
}
li.feed {
padding: 0 0 0 20px;
}
.activity-list .activity-content .activity-header img.avatar {
    float: none;
    margin: 0 5px 0 0;
}
/* ... */

